--- a/dev/history.pug
+++ b/dev/history.pug
@@ -1,7 +1,7 @@
 extends layout/main
 
 block variables
-  - var title = 'История заказов'
+  - var title = 'Заказы (2)'
   - var mainPage = false
   //- - const activeLink = 'История заказов'
 
