--- a/dev/orders.pug
+++ b/dev/orders.pug
@@ -1,7 +1,7 @@
 extends layout/main
 
 block variables
-  - var title = 'Текущие заказы'
+  - var title = 'Заказы'
   - var mainPage = false
   - const activeLink = 'Заказы (1)'
 
