--- a/dev/personal.pug
+++ b/dev/personal.pug
@@ -18,7 +18,7 @@ block content
             .col-md-8
               .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
-        .row
+        .row.row-test
             .col-md-3.d-none.d-lg-block 
               include modules/menus/personal-menu
               //- +menu('personal-menu', personalMenuData, activeMenuLink)
