--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -306,8 +306,8 @@
     //- есть еще personalMenuData1 в dev\modules\menus\personal-menu.pug
     //- со скобочками (1)
     const personalMenuData = [
-        {name: 'Заказы (1)',            url: 'orders.html'},
-        {name: 'История заказов',       url: 'history.html'},
+        //- {name: 'Заказы (1)',            url: 'orders.html'},
+        {name: 'Заказы (2)',            url: 'history.html'},
         {name: 'Корзина (2)',           url: 'basket.html'}, 
         {name: 'Избранное (2)',         url: 'favorites.html'},
         {name: 'Личные данные',         url: 'personal.html'},
