--- a/dev/css/project-main.scss
+++ b/dev/css/project-main.scss
@@ -46,6 +46,7 @@
 @import '../scss/blocks/big-grid';
 
 @import '../scss/blocks/banners';   
+@import '../scss/blocks/history';    
 
 
 
@@ -487,6 +488,12 @@ body,
 
 /* --------/add-favorites----- */
 
+@media screen and (max-width:768px) {
+  
+  // .row-test {
+  //   border: 1px solid green;
+  // }
+}
 
 /* заголовки */
 
@@ -496,11 +503,17 @@ body,
   font-size: 36px;
   line-height: 46px;
 
-  &_personal {
+  &_personal { 
     font-weight: 600;
     font-size: 20px;
     line-height: 30px;
     margin-bottom: 30px;
+
+    @media screen and (max-width:991px) { 
+      // border: 1px solid red;
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
 
     @media screen and (max-width:480px) {
       font-weight: 600;
