--- a/dev/modules/personal/last-order.pug
+++ b/dev/modules/personal/last-order.pug
@@ -1,4 +1,4 @@
-.order-items
+.order-items.position-lg-top-100px
   .order-item.noborder
     .mb-5.d-none.d-lg-block
       a.link.link--black_border(href='orders.html') Вернуться в текущие заказы
@@ -124,6 +124,9 @@
       .row.justify-content-between.d-none.d-lg-flex
         .col-auto  
         .col-md-4
+          .row.mb-2
+            .col-md-8.right Общий вес: 
+            .col-md-4 4, 28 кг
           .row.mb-2
             .col-md-8.right Стоимость доставки: 
             .col-md-4 0 Р
