--- a/dev/modules/personal/orders.pug
+++ b/dev/modules/personal/orders.pug
@@ -1,7 +1,7 @@
 
 - for (var x = 0; x < 2; x++)
 
-  .order-items.order-items__personal
+  .order-items.order-items__personal.position-lg-top-100px
     .order-item.noborder
       .order-item-title Заказ № 21112 от 03.02.2021
       .order-item-info.row.mb-3
