--- a/dev/orders.pug
+++ b/dev/orders.pug
@@ -1,9 +1,9 @@
 extends layout/main
 
 block variables
-  - var title = 'Заказы'
+  - var title = 'Заказы (2)'
   - var mainPage = false
-  - const activeLink = 'Заказы (1)'
+  - const activeLink = 'Заказы (2)'
 
 block content
   main.page-content.page-content--personal-area
