--- a/dev/scss/blocks/_personal.scss
+++ b/dev/scss/blocks/_personal.scss
@@ -11,6 +11,10 @@
 
   .page-heading {
     margin-bottom: 50px;
+
+    @media screen and  (max-width: 1199px) {
+      margin-bottom: 0;
+    }
   }
 
   .order-item-title {
