--- a/dev/last-order.pug
+++ b/dev/last-order.pug
@@ -1,9 +1,9 @@
 extends layout/main
 
 block variables
-  - var title = 'Текущие заказы'
+  - var title = 'Заказы (2)'
   - var mainPage = false
-  - const activeMenuLink = 'Заказы (1)'
+  - const activeMenuLink = 'Заказы (2)'
 
 block content
   main.page-content.page-content--personal-area
@@ -16,7 +16,7 @@ block content
                 .page-heading-title.page-heading-title_personal.uppercase= title            
 
               .col-md-8
-                .page-heading-title1.border-top-gray.only-desktop &nbsp;
+                //- .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
           .row
            .col-md-3.d-none.d-lg-block 
