--- a/dev/loyalty-card-empty.pug
+++ b/dev/loyalty-card-empty.pug
@@ -6,7 +6,8 @@ block variables
   //- - const activeLink = 'Карта лояльности'
 
 //- Карта лояльности
-block content.page-content--personal-area
+block content
+ .page-content--personal-area
   main.page-content
       .page-inner.page-inner--w2
         .page-heading
