--- a/dev/modules/footer-inner.pug
+++ b/dev/modules/footer-inner.pug
@@ -75,7 +75,7 @@ div
           form.form(novalidate="novalidate")
             .footer-form__form
               .form-row
-                input( type='email' name='f3' required='' data-validation='{"message": "Укажите корретный адрес почты"}' value='petrov@gmail.com')
+                input( type='email' name='f3' required='' data-validation='{"message": "Укажите корректный адрес почты"}' value='petrov@gmail.com')
               button.btn.btn--white(type='submit' href='#message-you-subscribed' data-popup='{"type":"inline"}') ok
               //- a.link.link--black_border(href='#message-you-subscribed' data-popup='{"type":"inline"}') Сообщение об удачной подписке
 
