--- a/dev/modules/personal/content.pug
+++ b/dev/modules/personal/content.pug
@@ -15,7 +15,7 @@ form.form
 
     .form-row
       label.form-item-label(for='f3') E-mail
-      input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корретный адрес почты"}' value='petrov@gmail.com')
+      input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корректный адрес почты"}' value='petrov@gmail.com')
 
     .form-row
       label.form-item-label(for='f4') Телефон
