--- a/dev/modules/personal/loyalty-card-empty.pug
+++ b/dev/modules/personal/loyalty-card-empty.pug
@@ -17,7 +17,7 @@
 
       .form-row
       label.form-item-label(for='f3') E-mail
-      input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корретный адрес почты"}' value='petrov@gmail.com')
+      input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корректный адрес почты"}' value='petrov@gmail.com')
 
       .form-row
       button.btn.btn--black.btn--medium.w100.max-w100(type='submit') ДОБАВИТЬ В КОРЗИНУ
