--- a/dev/modules/popups/registration.pug
+++ b/dev/modules/popups/registration.pug
@@ -16,7 +16,7 @@
         input#f1.form-item.form-item--text(type='text' name='f13' data-validation='{"message": "Обязательное поле"}' required='' value='Фамилия')
       .form-row
         label.form-item-label(for='f3') E-mail
-        input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корретный адрес почты"}' value='petrov@gmail.com')
+        input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корректный адрес почты"}' value='petrov@gmail.com')
       .form-row
         label.form-item-label(for='f4') Телефон
         input#f4.form-item.form-item--text(type='text' name='f4' data-validation='{"message": "Укажите корректный номер телефона", "pattern": "phoneRU", "mask": "+7 (999) 999-99-99"}' required='' value='+7 556 666-66-6')
