--- a/dev/basket.pug
+++ b/dev/basket.pug
@@ -13,13 +13,13 @@ block content
         .row.align-items-end.justify-content-between
           .col-md-6
             .d-md-none.mb-3
-              a.link.link--black(href='#') Вернуться в корзину
+              a.link.link--black(href='#') Назад к покупкам
             .basket-form__title Оформление заказа
             .basket-form__text    Обработка заказов ежедневно
               nobr 09:00 — 21:00
           .col-auto.d-none.d-md-block
             span 
-              a.link.link--black(href='#') Вернуться в корзину
+              a.link.link--black(href='#') Назад к покупкам
 
       form.form.basket__body(novalidate="novalidate")
         .basket__body-left
