--- a/dev/modules/popups/message-you-subscribed.pug
+++ b/dev/modules/popups/message-you-subscribed.pug
@@ -4,4 +4,4 @@
     .page-popup-title Вы подписаны
     .page-popup-title--small 
          | Мы напишем вам на почту, когда эта вещь поступит в продажу
-    a.btn.btn--black.btn--medium.max-w100.w100(href='#') Продолжить
+    a.btn.btn--black.btn--medium.max-w100.w100.close-popup(href='#') Продолжить
