--- a/dev/modules/popups/notify-about-arrival.pug
+++ b/dev/modules/popups/notify-about-arrival.pug
@@ -23,7 +23,7 @@ mixin listLinks(classname,...items)
         
         .form-row
           label.form-item-label(for='f3') E-mail
-          input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корретный адрес почты"}' value='petrov@gmail.com')
+          input#f3.form-item.form-item--text(type='email' name='f3' required='' data-validation='{"message": "Укажите корректный адрес почты"}' value='petrov@gmail.com')
  
         .form-row.form-row--checkbox
           input#saile.form-item.form-item--checkbox.catalog-item-checkbox(type='checkbox' checked='checked')
