fix basket page

--- a/dev/scss/blocks/_basket-page.scss
+++ b/dev/scss/blocks/_basket-page.scss
@@ -112,8 +112,8 @@
 //   display: none;
 // }
 
-.opend .v-hidden {
-  visibility: visible; 
-}
+// .opend .v-hidden {
+//   visibility: visible; 
+// }
 
 
