--- a/dev/scss/blocks/_order.scss
+++ b/dev/scss/blocks/_order.scss
@@ -270,8 +270,9 @@
         line-height: 20px;
     }
 
-    &__list {
+    &__list { 
         margin-top: 20px;
+        margin-bottom: 20px;
 
     }
 
