--- a/dev/dashboard.pug
+++ b/dev/dashboard.pug
@@ -6,7 +6,7 @@ block variables
 
 
 block content
-  main.page-content.page-content--personal-area 
+  main.page-content.page-content--personal-area.page-content--personal-area--dashboard 
 
     .page-inner.page-inner--w2
 
