--- a/dev/login.pug
+++ b/dev/login.pug
@@ -6,8 +6,8 @@ block variables
 
 
 block content
-  main
-    #auth-form.page-popup.page-popup_login
+  main.page-content
+    #auth-form.page-popup
       .page-popup-title ВХОД
       form.form
         .tabs.form-tabs
