--- a/dev/personal.pug
+++ b/dev/personal.pug
@@ -16,7 +16,7 @@ block content
               .page-heading-title.page-heading-title_personal.uppercase= title            
 
             .col-md-8
-              .page-heading-title1.border-top-gray.only-desktop &nbsp;
+              //- .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
         .row.row-test
             .col-md-3.d-none.d-lg-block 
@@ -25,5 +25,5 @@ block content
             .col-lg-1
             .col-12.col-md-5.offset-md-2.offset-lg-0.col-lg-5.col-xl-4
               include modules/personal/content  
-            .col-12.col-md-3.col-xl-4
-              a.link.link--black_border(href='loyalty-card.html') Есть карта лояльности?
+            //- .col-12.col-md-3.col-xl-4
+            //-   a.link.link--black_border(href='loyalty-card.html') Есть карта лояльности?
