--- a/dev/sms-cod.pug
+++ b/dev/sms-cod.pug
@@ -7,7 +7,7 @@ block variables
 
 block content
   main
-    #auth-form.page-popup.page-popup_login
+    #auth-form.page-popup
       .page-popup-title ВХОД
       form.form
         #auth-form_phone.tab-content-item.auth-tab.show.form-tab-content-item
