fix: catalog-buyer-menu close points

--- a/dev/scss/blocks/_personal.scss
+++ b/dev/scss/blocks/_personal.scss
@@ -1,5 +1,19 @@
 @import '../variables';
 
+// // self.$buyerMenuSections
+// .menu-sections {
+//   border: 1px solid green;
+// }
+
+// // self.$dropdown
+// .header-menu__item-dropdown {
+//   border: 1px solid red;
+// }
+
+// .header-menu__list .header-menu__item:not(.catalog-dropdown) {
+//   border: 1px solid blue;
+// }
+
 .page-content.page-content--personal-area {
   // border: 1px solid red;
   margin-top: 70px;
