--- a/dev/order-cancel.pug
+++ b/dev/order-cancel.pug
@@ -3,7 +3,7 @@ extends layout/main
 block variables
   - var title = 'Текущие заказы'
   - var mainPage = false
-  - const activeLink = 'Заказы (1)'
+  - const activeLink = 'Заказы (2)'
   
 
 
@@ -15,7 +15,7 @@ block content
             .col-md-4 
               .mb-4.d-lg-none
                 a.link.link--gray_border(href="dashboard.html") Личный кабинет
-              .page-heading-title.page-heading-title_personal.uppercase отмена заказа
+              .page-heading-title.page-heading-title_personal.uppercase Заказы (2)
             .col-md-8
               .page-heading-title1.border-top-gray.only-desktop &nbsp;
 
