--- a/dev/utils/data.pug
+++ b/dev/utils/data.pug
@@ -207,6 +207,14 @@
     //- {img: 'c3.jpg', title: 'ПЛАТЬЕ', price: '15 900 Р', size: '41', color: 'коричневый'},
     //- {img: 'c4.jpg', title: 'ПЛАТЬЕ', price: '15 900 Р', size: '41', color: 'коричневый'},
     ]
+
+//- - данные для списка 'Товары в заказе' - таблица
+//- стр: last-order.html        
+- 
+  const ItemsInOrder = [
+    {img: '1.jpg', title: 'Жакет', price: '2 500', size: 'S', color: 'коричневый', price: '8 990', count: '1', total:'8990'},
+    {img: '2.jpg', title: 'Жакет', price: '12 500', size: 'S', color: 'коричневый', price: '8 990', count: '1', total:'8990'},
+    ]
 //- - данные для списка 'Товары в корзине' 
 //- стр: basket.html        
 - 
